Bug 165322 - FILEOPEN DOCX Overlapping tracked formatting+deletion displayed incorrectly
Summary: FILEOPEN DOCX Overlapping tracked formatting+deletion displayed incorrectly
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.3.0.4 release
Hardware: All All
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: target:25.8.0 target:24.8.6 target:25...
Keywords:
: 165340 (view as bug list)
Depends on:
Blocks: DOCX-Track-Changes
  Show dependency treegraph
 
Reported: 2025-02-18 19:46 UTC by Gabor Kelemen (Collabora)
Modified: 2025-04-17 09:48 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Word 2016 (13.18 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2025-02-18 19:46 UTC, Gabor Kelemen (Collabora)
Details
The example file in Word and Writer master (112.63 KB, image/png)
2025-02-18 19:46 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2025-02-18 19:46:33 UTC
Created attachment 199291 [details]
Example file from Word 2016

Attached example file shows a change tracked deletion and a style change applied to its first paragraph.

When the file is opened in Writer, the formatted paragraph appears as not deleted, when tracked changes are shown, but correctly hidden when they are hidden.

1. Open attached file
2. Make sure Edit - Track Changes - Show is enabled
-> The "Nunc viverra" sentence is visible as not crossed, but it should be crossed out

Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 41ab24cecd6ad74312843f113d2faa13259cdb7d
CPU threads: 14; OS: Windows 10 X86_64 (build 19045); UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: threaded

Looks like this since 4.3 when the formatting change was first imported.

https://cgit.freedesktop.org/libreoffice/core/log/?qt=range&q=ae7f8bed4bc4d7490a158c14d077c5323bd50466..7a6ca9e81c71786b267fde8328c84bb10966c27c

most likely from this range is 
https://cgit.freedesktop.org/libreoffice/core/commit/?id=e52f14efaa53b496599b51fb064a933183731fca

Export redline 'paragraph formatting changes' back to DOCX
Comment 1 Gabor Kelemen (Collabora) 2025-02-18 19:46:51 UTC
Created attachment 199292 [details]
The example file in Word and Writer master
Comment 2 Commit Notification 2025-02-25 09:52:27 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c5f7619d6eebe478332ae4dcb27fde85df6278a9

tdf#165322 sw: GetRedline() binary search doesn't work with overlaps

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2025-02-25 09:52:29 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f439448d21ef2feb03a9920d95d30f23795db6ac

tdf#165322 sw: prefer insert/delete redline in mouse-over tooltip

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Michael Stahl 2025-02-25 10:40:23 UTC
*** Bug 165340 has been marked as a duplicate of this bug. ***
Comment 5 Commit Notification 2025-02-25 11:54:42 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b3567d7e1f08df7c050d3cec86cbb200af558172

tdf#165322 sw: apply formatting for multiple redlines in SwRedlineItr

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2025-02-25 16:43:38 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/ea0e5148d0b6f9365ed74b4b8547e5171d7fad43

tdf#165322 sw: GetRedline() binary search doesn't work with overlaps

It will be available in 24.8.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2025-02-25 16:46:41 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/b016c132eed47439fe96a1d9f933f3d6368a9718

tdf#165322 sw: prefer insert/delete redline in mouse-over tooltip

It will be available in 24.8.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2025-02-25 16:46:44 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/9bd50bdd21145199fd4be48e24d1a7b270175fcd

tdf#165322 sw: apply formatting for multiple redlines in SwRedlineItr

It will be available in 24.8.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2025-02-25 16:46:47 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/ecdf2de307b8a673d22d1094a8e4b1e54242c193

tdf#165322 sw: prefer insert/delete redline in mouse-over tooltip

It will be available in 25.2.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2025-02-25 16:47:50 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/9c95c12f12f6c20f0611497d86e92b66081878ed

tdf#165322 sw: apply formatting for multiple redlines in SwRedlineItr

It will be available in 25.2.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2025-02-25 16:47:53 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/c1af17366dfa586549009c8c423aed7abdc1cbcc

tdf#165322 sw: GetRedline() binary search doesn't work with overlaps

It will be available in 25.2.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Gabor Kelemen (Collabora) 2025-02-26 09:44:26 UTC
Verified in

Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 12c1596b0fd152399bed90f3d26014a32efc24e3
CPU threads: 14; OS: Windows 10 X86_64 (build 19045); UI render: default; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: threaded

Now the "Nunc viverra" line is also marked as deleted.
Comment 13 Commit Notification 2025-04-17 09:48:54 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7a1371b5883fa43a789aa685187c5fffcec64b7e

Related: tdf#165322 sw: add tooltip testcase for format+delete redline combo

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.