tdf#165322 sw: apply formatting for multiple redlines in SwRedlineItr

SwRedlineItr::Seek() assumes that redlines don't overlap, but sometimes
they do, at least a ParagraphFormat and a Delete redline can overlap
(unsure if that is a good idea) when imported from DOCX.

Change-Id: Ic13080bfe8c9910ffef44f3e48d11c7f852427ba
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/181961
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>